--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -265,7 +265,7 @@ stages:
                 $(_PublishArgs)
                 $(_InternalRuntimeDownloadArgs)
                 $(WindowsArm64InstallersLogArgs)
-        displayName: Build Arm64 Installers
+        displayName: Build ARM64 Installers
 
       # A few files must also go to the VS package feed.
       - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest'), ne(variables.PostBuildSign, 'true')) }}:
