!test only! Grab binlog for helix.proj build step

--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -689,7 +689,7 @@ stages:
         - script: ./eng/build.cmd -ci -nobl -noBuildRepoTasks -restore -noBuild -noBuildNative -projects src/Grpc/**/*.csproj
                   /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log $(_InternalRuntimeDownloadArgs)
           displayName: Restore interop projects
-        - script: ./eng/build.cmd -ci -nobl -noBuildRepoTasks -noRestore -test -all -noBuildNative
+        - script: ./eng/build.cmd -ci -noBuildRepoTasks -noRestore -test -all -noBuildNative
                   -projects eng\helix\helix.proj /p:IsHelixPRCheck=true
                   /p:IsHelixJob=true /p:BuildInteropProjects=true /p:RunTemplateTests=true
                   /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log $(_InternalRuntimeDownloadArgs)
