--- a/.azure/pipelines/helix-matrix.yml
+++ b/.azure/pipelines/helix-matrix.yml
@@ -29,11 +29,7 @@ jobs:
     agentOs: Windows
     timeoutInMinutes: 480
     steps:
-    # Build the shared framework
-    - script: ./eng/build.cmd -ci -nobl -all -pack -arch x64
-              /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
-      displayName: Build shared fx
-    - script: .\eng\build.cmd -ci -nobl -noBuildRepoTasks -noRestore -test -all -noBuildNative
+    - script: .\eng\build.cmd -ci -nobl -arch x64 -all -restore -noBuild -test
               -projects eng\helix\helix.proj /p:IsHelixJob=true
               /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
       displayName: Run build.cmd helix target
