--- a/.azure/pipelines/quarantined-pr.yml
+++ b/.azure/pipelines/quarantined-pr.yml
@@ -53,11 +53,7 @@ jobs:
     agentOs: Windows
     timeoutInMinutes: 120
     steps:
-    # Build the shared framework
-    - script: ./eng/build.cmd -ci -nobl -all -pack -arch x64
-              /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
-      displayName: Build shared fx
-    - script: ./eng/build.cmd -ci -nobl -noBuildRepoTasks -noRestore -test -all -noBuildJava -noBuildNative
+    - script: ./eng/build.cmd -ci -nobl -arch x64 -all -restore -noBuild -test -noBuildJava
               -projects eng\helix\helix.proj /p:IsHelixPRCheck=true /p:RunQuarantinedTests=true /p:IsHelixJob=true
               /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
       displayName: Run build.cmd helix target
