--- a/.azure/pipelines/helix-matrix.yml
+++ b/.azure/pipelines/helix-matrix.yml
@@ -48,3 +48,29 @@ jobs:
     - name: Helix_logs
       path: artifacts/log/
       publishOnError: true
+      
+# Helix ARM64
+- ${{ if ne(variables['System.TeamProject'], 'internal') }}:
+  - template: jobs/default-build.yml
+    parameters:
+      jobName: Helix_matrix_arm64
+      jobDisplayName: "Tests: Helix ARM64 matrix"
+      agentOs: Linux
+      timeoutInMinutes: 480
+      useHostedUbuntu: false
+      steps:
+      - script: ./eng/build.sh --ci --nobl --pack --arch arm64
+                /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
+        displayName: Build shared Fx
+      - script: ./eng/build.sh --ci --nobl --arch arm64 --noBuildRepoTasks --no-build-nodejs --no-restore --test --all
+                --projects $(Build.SourcesDirectory)/eng/helix/helix.proj /p:IsHelixJob=true
+                /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
+        displayName: Run build.sh helix arm64 target
+        env:
+          HelixApiAccessToken: $(HelixApiAccessToken) # Needed for internal queues
+          SYSTEM_ACCESSTOKEN: $(System.AccessToken) # We need to set this env var to publish helix results to Azure Dev Ops
+      artifacts:
+      - name: Helix_arm64_logs
+        path: artifacts/log/
+        publishOnError: true
+        includeForks: true
