Build on windows

--- a/.azure/pipelines/helix-matrix.yml
+++ b/.azure/pipelines/helix-matrix.yml
@@ -55,9 +55,8 @@ jobs:
     parameters:
       jobName: Helix_matrix_arm64
       jobDisplayName: "Tests: Helix ARM64 matrix"
-      agentOs: Linux
+      agentOs: Windows
       timeoutInMinutes: 480
-      useHostedUbuntu: false
       steps:
       - script: ./eng/build.sh --ci --nobl --pack --arch arm64
                 /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
