--- a/.azure/pipelines/helix-matrix.yml
+++ b/.azure/pipelines/helix-matrix.yml
@@ -62,13 +62,15 @@ jobs:
       agentOs: Windows
       timeoutInMinutes: 480
       steps:
-      - script: ./eng/build.sh --ci --nobl --pack --arch arm64
+    # Build the shared framework
+      - script: ./eng/build.cmd -ci -nobl -all -pack -arch arm64
                 /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
-        displayName: Build shared Fx
-      - script: ./eng/build.sh --ci --nobl --arch arm64 --noBuildRepoTasks --no-build-nodejs --no-restore --test --all
-                --projects $(Build.SourcesDirectory)/eng/helix/helix.proj /p:IsHelixJob=true
+        displayName: Build shared fx
+      - script: .\eng\build.cmd -ci --arch arm64 -noBuildRepoTasks -NoRestore -test -all
+                -projects eng\helix\helix.proj
+                /p:IsHelixJob=true /p:RunTemplateTests=true
                 /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
-        displayName: Run build.sh helix arm64 target
+        displayName: Run build.cmd helix target
         env:
           HelixApiAccessToken: $(HelixApiAccessToken) # Needed for internal queues
           SYSTEM_ACCESSTOKEN: $(System.AccessToken) # We need to set this env var to publish helix results to Azure Dev Ops
