--- a/eng/targets/Helix.Common.props
+++ b/eng/targets/Helix.Common.props
@@ -38,7 +38,7 @@
       <!-- aspnetcore-quarantined-tests (quarantined-tests.yml) and RunHelix.ps1 -RunQuarantinedTests -->
       <ItemGroup>
         <!-- See what blows up since IIS Express isn't supported on arm64 and only run Windows only tests for now -->
-        <HelixAvailableTargetQueue Include="Windows.10.Arm64v8.Open" Platform="Windows" Condition=" '$(IsWindowsOnlyTest)' != 'true' "/>
+        <HelixAvailableTargetQueue Include="Windows.10.Arm64v8.Open" Platform="Windows" Condition=" '$(IsWindowsOnlyTest)' == 'true' "/>
       </ItemGroup>
     </Otherwise>
   </Choose>
