--- a/.azure/pipelines/helix-matrix.yml
+++ b/.azure/pipelines/helix-matrix.yml
@@ -62,10 +62,29 @@ jobs:
       agentOs: Windows
       timeoutInMinutes: 480
       steps:
-    # Build the shared framework
-      - script: ./eng/build.cmd -ci -nobl -all -pack -arch arm64
-                /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log
-        displayName: Build shared fx
+      - script: ./eng/build.cmd
+                -ci
+                -arch x64
+                -pack
+                -all
+                $(_BuildArgs)
+                $(_InternalRuntimeDownloadArgs)
+                $(Windows64LogArgs)
+        displayName: Build x64/arm64      
+      # Build the arm64 shared framework
+      - script: ./eng/build.cmd
+                -ci
+                -arch arm64
+                -sign
+                -pack
+                -noBuildJava
+                -noBuildNative
+                /p:DotNetSignType=$(_SignType)
+                /p:OnlyPackPlatformSpecificPackages=true
+                $(_BuildArgs)
+                $(_InternalRuntimeDownloadArgs)
+                $(WindowsArm64LogArgs)
+        displayName: Build ARM64 shared fx
       - script: .\eng\build.cmd -ci --arch arm64 -noBuildRepoTasks -NoRestore -test -all
                 -projects eng\helix\helix.proj
                 /p:IsHelixJob=true /p:RunTemplateTests=true
